poc-k8s/poc-ingress/poc-ingress-from-external-ip/config/deployment-02.yaml
# server application service
apiVersion: v1
kind: Service
metadata:
  name: poc-service-02
  labels:
    poc: poc-ingress-from-external-ip
spec:
  type: ClusterIP
  selector:
    app: poc-server-02
  ports:
    - name: http
      port: 7777
      protocol: TCP
      targetPort: http-server
---
# server application
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poc-deployment-02
  labels:
    app: poc-server-02
    poc: poc-ingress-from-external-ip
spec:
  replicas: 3
  selector:
    matchLabels:
      app: poc-server-02
  template:
    metadata:
      labels:
        app: poc-server-02
        poc: poc-ingress-from-external-ip
    spec:
      containers:
        - name: server
          image: httpd
          ports:
            - name: http-server
              containerPort: 80
